Machine_Learning_Engineering/PyTorch_FastAPI_Project/mlapi/.k8s/overlays/prod/patch-deployment-lab4_copy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: lab4-prediction-container
          image: [TAG]
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 500Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
