Machine_Learning_Engineering/PyTorch_FastAPI_Project/mlapi/.k8s/overlays/prod/patch-deployment-project.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: project-prediction-container
          image: w255mids.azurecr.io/aquon/project:ae1ced5
          resources:
            requests:
              cpu: 900m
              memory: 1500Mi
            limits:
              cpu: 2800m
              memory: 3000Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
